--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="card_shopping_item_enabled_background_color">#695D9F</color>
+    <color name="card_shopping_item_disabled_background_color">#33BB86FC</color>
 </resources>
