--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".presentation.MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_shopping_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/shopping_item_enabled"
